Cập nhật code để chạy trên window
Fix bug chapter 3.2, thêm, hi, hello trên 3.1, cập nhật reference edgeface

--- a/References/references.bib
+++ b/References/references.bib
@@ -51,3 +51,12 @@
   url          = {https://openreview.net/forum?id=Va5jZARDcx},
   note         = {Accessed: 2025-09-26}
 }
+
+@misc{george2024edgeface,
+  author       = {Abhijith George and Sanchit S. Katte and Hrishikesh S. Moti and Anush M. Kini and Sai Akhil D},
+  title        = {EdgeFace: A Non-Iterative Method for Efficient Quantization of Face Recognition Models for the Edge},
+  howpublished = {arXiv preprint arXiv:2307.01838},
+  year         = {2024}, 
+  url          = {https://arxiv.org/abs/2307.01838},
+  note         = {Accessed: 2025-10-09}
+}
