Viết phần 4 - Khung sườn

--- a/main.tex
+++ b/main.tex
@@ -188,6 +188,8 @@
 
 \include{Chapter3/chapter3.2}
 
+\include{Chapter4/chapter4}
+
 % Công trình của tác giả (nếu không có thì comment 02 dòng dưới)
 \addcontentsline{toc}{chapter}{Danh mục công trình của tác giả}
 \include{Appendix/publish}
