--- a/References/references.bib
+++ b/References/references.bib
@@ -60,3 +60,12 @@
   url          = {https://arxiv.org/abs/2307.01838},
   note         = {Accessed: 2025-10-09}
 }
+
+@misc{opqn,
+  author       = {Ming Zhang and Xuefei Zhe and Hong Yan},
+  title        = {Orthonormal Product Quantization Network for Scalable Face Image Retrieval},
+  howpublished = {arXiv preprint arXiv:2107.00327},
+  year         = {2021}, 
+  url          = {https://arxiv.org/abs/2107.00327},
+  note         = {Accessed: 2025-10-17}
+}
