--- a/References/references.bib
+++ b/References/references.bib
@@ -69,3 +69,12 @@
   url          = {https://arxiv.org/abs/2107.00327},
   note         = {Accessed: 2025-10-17}
 }
+
+@misc{facescrub,
+  author       = {Rajnishe},
+  title        = {FaceScrub Full Dataset},
+  howpublished = {Kaggle Datasets},
+  year         = {2020}, 
+  url          = {https://www.kaggle.com/datasets/rajnishe/facescrub-full},
+  note         = {Accessed: 2025-10-23}
+}
