Cấu trúc lại bài
Để hết phần lý thuyết ở chương 3 cũ, về chương 2.

Chương 3 dùng để viết phương pháp cải tiến nhưng chưa đủ trang, trong khi chương 2 thì dư rồi, để coi coppy được chỗ nào qua

--- a/References/references.bib
+++ b/References/references.bib
@@ -78,3 +78,22 @@
   url          = {https://www.kaggle.com/datasets/rajnishe/facescrub-full},
   note         = {Accessed: 2025-10-23}
 }
+
+
+@misc{cosface,
+  author       = {Hao Wang and Yitong Wang and Zheng Zhou and Xing Ji and Dihong Gong and Jingchao Zhou and Zhifeng Li and Wei Liu},
+  title        = {CosFace: Large Margin Cosine Loss for Deep Face Recognition},
+  howpublished = {arXiv preprint},
+  year         = {2018},
+  url          = {https://arxiv.org/pdf/1801.09414.pdf},
+  note         = {Accessed: 2025-12-05}
+}
+
+@misc{arcface,
+  author       = {Jiankang Deng and Jia Guo and Jing Yang and Niannan Xue and Irene Kotsia and Stefanos Zafeiriou},
+  title        = {ArcFace: Additive Angular Margin Loss for Deep Face Recognition},
+  howpublished = {arXiv preprint},
+  year         = {2018},
+  url          = {https://arxiv.org/pdf/1801.07698.pdf},
+  note         = {Accessed: 2025-12-05}
+}
