--- a/main.tex
+++ b/main.tex
@@ -115,6 +115,10 @@
 \usetikzlibrary{calc}
 \newcommand\HRule{\rule{\textwidth}{1pt}}
 
+
+\usepackage{amsmath} % only if not already loaded in main file
+\DeclareMathOperator{\logit}{logit}
+
 % ========================================================================================= %
 % CHÚ Ý: Thông tin chung về KLTN - sinh viên điền vào đây để tự động update các trang khác  %
 % ========================================================================================= %
