Cập nhật chương 2 EdgeFace

--- a/References/references.bib
+++ b/References/references.bib
@@ -52,6 +52,18 @@
   note         = {Accessed: 2025-09-26}
 }
 
+
+@inproceedings{maaz2022edgenext,
+  title={EdgeNeXt: Efficiently Amalgamated CNN-Transformer Architecture for Mobile Vision Applications},
+  author={Maaz, Muhammad and Shaker, Abdelrahman and Cholakkal, Hisham and Khan, Salman and Zamir, Syed Waqas and Anwer, Rao Muhammad and Khan, Fahad Shahbaz},
+  booktitle={European Conference on Computer Vision (ECCV) Workshops},
+  pages={3--20},
+  year={2022},
+  organization={Springer}
+}
+
+
+
 @misc{george2024edgeface,
   author       = {Abhijith George and Sanchit S. Katte and Hrishikesh S. Moti and Anush M. Kini and Sai Akhil D},
   title        = {EdgeFace: A Non-Iterative Method for Efficient Quantization of Face Recognition Models for the Edge},
@@ -97,3 +109,4 @@
   url          = {https://arxiv.org/pdf/1801.07698.pdf},
   note         = {Accessed: 2025-12-05}
 }
+
