--- a/main.tex
+++ b/main.tex
@@ -65,6 +65,7 @@
 
 % Chèn và định dạng mã giả
 \usepackage{amsmath}
+\usepackage{amssymb}        % Hỗ trợ ký hiệu toán học (cho \mathbb)
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
 \makeatletter
